scss/partials/_navbar.scss
nav.oc-navbar {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  background-color: $grey_num_2;
  transition: height 230ms;
  border-bottom: 1px solid $ultra_light_grey;

  &.showing-orgs-dropdown {
    overflow: visible;
  }

  @include big_web(){
    height: #{$navbar_height}px;
  }

  @include mobile(){
    transition: 230ms;
    overflow: hidden;
    height: #{$mobile_navbar_height}px;
    padding-bottom: 1px;
    border-bottom: none;
    border-bottom: 1px solid $grey_num_3;
    background-color: $grey_num_2;
    overflow: visible;

    &.show-login-overlay {
      height: 100vh !important;
    }

    &.showing-orgs-dropdown {
      overflow: visible;
    }

    &.expanded-user-menu {
      height: 100vh;
    }
  }

  z-index: $navbar_zindex;
  margin: 0px;

  div.oc-navbar-header {
    position: relative;
    margin: 0 auto;
    padding: 12px 16px;
    height: #{$navbar_height}px;
    width: 100%;

    @include mobile() {
      width: 100vw;
      padding: 16px;
      height: #{$mobile_navbar_height}px;
    }

    div.oc-navbar-header-container{
      height: 32px;

      @include mobile(){
        height: 40px;
      }

      div.navbar-center {
        text-align: center;
        width: 320px;
        height: 32px;
        position: absolute;
        left: 50%;
        top: 12px;
        margin-left: -160px;
        @include OC_Body_Bold();
        font-size: 26px;
        transition: margin-left 320ms ease-in, width 320ms ease-in;

        @include mobile() {
          position: absolute;
          top: 16px;
          left: 72px;
          width: calc(100vw - 64px - 80px);
          height: 40px;
          margin: 0;
        }

        div.mobile-sections-list {
          display: none;

          @include mobile() {
            width: 100vw;
            height: 100vh;
            position: absolute;
            position: fixed;
            top: 0;
            left: 0;
            background-color: transparent;
            display: block;

            div.mobile-sections-list-inner {
              display: block;
              width: calc(100vw - 64px - 80px);
              max-height: 60vh;
              position: absolute;
              top: 64px;
              left: 72px;
              border-radius: 4px;
              background-color: white;
              padding: 8px 0 0;
              overflow-x: hidden;
              overflow-y: auto;
              border: 1px solid $mid_light_grey;
              box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.07);

              button.mobile-section-item {
                display: block;
                width: 100%;
                height: 34px;
                padding: 8px 16px;
                @include OC_Body_Book();
                color: rgba($light_navy, 0.5);
                font-size: 14px;
                line-height: 18px;
                text-align: left;
                max-width: 100%;
                overflow: hidden;
                text-overflow: ellipsis;
                white-space: nowrap;
                position: relative;

                &.compose {
                  padding-left: 39px;
                  &:before {
                    content: " ";
                    width: 12px;
                    height: 12px;
                    position: absolute;
                    top: 11px;
                    left: 18px;
                    background-image: cdnUrl("/img/ML/compose_icon_grey.svg");
                    background-size: 12px 12px;
                    background-repeat: no-repeat;
                    background-position: center;
                    opacity: 0.5;
                  }
                }

                &.all-posts {
                  padding-left: 39px;
                  &:before {
                    content: " ";
                    width: 16px;
                    height: 16px;
                    position: absolute;
                    top: 9px;
                    left: 16px;
                    background-image: cdnUrl("/img/ML/digest_icon_grey.svg");
                    background-size: 16px 16px;
                    background-repeat: no-repeat;
                    background-position: center;
                    opacity: 0.5;
                  }
                }

                &.drafts {
                  padding-left: 39px;
                  &:before {
                    content: " ";
                    width: 12px;
                    height: 16px;
                    position: absolute;
                    top: 9px;
                    left: 18px;
                    background-image: cdnUrl("/img/ML/drafts_icon_grey.svg");
                    background-size: 12px 16px;
                    background-repeat: no-repeat;
                    background-position: center;
                    opacity: 0.5;
                  }
                }

                &.active, &:focus, &:active {
                  background-color: $ultra_light_grey;
                  color: $light_navy;
                  -webkit-tap-highlight-color: $ultra_light_grey;

                  &.all-posts:before, &.drafts:before {
                    opacity: 1;
                  }
                }
              }

              button.mobile-section-item-compose {
                border-radius: 6px;
                background-color: $carrot_green;
                margin: 8px;
                text-align: center;
                display: flex;
                justify-content: center;
                align-items: center;
                height: 40px;
                width: calc(100% - 16px);
                opacity: 1;

                span.compose-green-icon {
                  width: 12px;
                  height: 22px;
                  background-image: cdnUrl("/img/ML/white_pen.svg");
                  background-size: 12px 12px;
                  background-position: center;
                  background-repeat: no-repeat;
                }

                span.compose-green-label {
                  @include OC_Body_Bold();
                  font-size: 16px;
                  line-height: 22px;
                  color: white;
                  margin-left: 8px;
                  margin-top: 1px;
                }
              }
            }
          }
        }

        &.search-active {
          width: 430px;
          margin-left: -215px;
        }

        button.mobile-board-button {
          display: none;

          @include mobile() {
            display: block;
            width: calc(100vw - 64px - 80px);
            margin: 0;
            height: 40px;
            background-color: $ultra_light_grey;
            border-radius: 4px;
            border: none;
            padding: 10px 20px 10px 14px;
            @include OC_Body_Book();
            font-size: 16px;
            color: $deep_navy;
            text-align: left;
            background-image: cdnUrl("/img/ML/select_arrows.svg");
            background-size: 8px 10px;
            background-position: top 15px right 8px;
            background-repeat: no-repeat;
            overflow: hidden;
            text-overflow: ellipsis;
            max-width: 100%;
            white-space: nowrap;
          }
        }

        button.orgs-dropdown div.org-avatar {
          height: 32px;
          @include org-avatar(32);
        }
      }

      div.navbar-left {
        float: left;
        height: 32px;

        div.orgs-dropdown {
          float: left;

          button.orgs-dropdown-btn {
            div.org-avatar-container {
              span.org-name {
                font-size: 18px;
              }
            }
          }

          @include mobile(){
            height: 40px;
            @include org-avatar(40);

            button.orgs-dropdown-btn {
              div.org-avatar div.org-avatar-container span.org-name {
                display: none;
              }
            }

            div.org-avatar-container {
              span.org-name {
                display: none;
              }
            }

            ul.orgs-dropdown-menu {
              li div.org-avatar {
                @include org-avatar(24);

                div.org-avatar-container, div.org-avatar-container.no-avatar {
                  span.org-name {
                    display: block !important;
                    max-width: 88px;
                  }
                }
              }
            }
          }
        }

        button.search-bt {
          width: 24px;
          height: 24px;
          background-image: cdnUrl("/img/ML/spyglass.svg");
          background-size: 18px 18px;
          background-repeat: no-repeat;
          background-position: 0px center;
          position: absolute;
          margin: 0;
          padding: 0;
          left: calc(30vw - 12px);
          top: 16px;

          @include preload_image(cdnUrl("/img/ML/spyglass_active.svg"));

          &.active {
            background-image: cdnUrl("/img/ML/spyglass_active.svg");
          }
        }
      }

      div.navbar-right {
        float: right;
        margin-right: 0px;

        @include mobile() {
          position: absolute;
          top: 16px;
          right: 16px;
          width: 40px;
          height: 40px;
        }

        div.user-notifications {
          float: left;
          margin-right: 8px;

          @include mobile() {
            display: none;
          }
        }

        div.user-menu {
          width: 32px;
          height: 32px;
          float: right;
          position: relative;

          @include mobile() {
            float: unset;
            width: 40px;
            height: 40px;
          }

          div.user-menu-button.green-dot {
            position: relative;
            &:after {
              content: "";
              width: 12px;
              height: 12px;
              border-radius: 50%;
              background-color: $carrot_green;
              position: absolute;
              top: 0;
              right: 0;
              border: 2px solid $grey_num_2;
            }
          }
        }
      }
    }
  }
}

